--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "",
   "main": "./server/server.js",
   "scripts": {
-    "start": "nodemon server/server.js",
+    "start": "nodemon server/server.js || node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "8.11.1"  
+    "node": "8.11.1"
   },
   "author": "",
   "license": "ISC",
