--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./server/server.js",
   "scripts": {
     "start": "nodemon server/server.js || node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
     "node": "8.11.1"
@@ -16,5 +17,9 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "expect": "^23.5.0",
+    "mocha": "^5.2.0"
   }
 }
