--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./server/server.js",
   "scripts": {
+    "c": "commit.bat",
     "t": "npm run test-watch",
     "start": "nodemon -e js,html server/server.js || node server/server.js",
     "test": "mocha server/**/*.test.js",
