--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "c": "commit.bat",
     "t": "npm run test-watch",
-    "start": "nodemon -e js,html server/server.js || node server/server.js",
+    "start": "nodemon -e js,html,css server/server.js || node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
